--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/FlaskyII">Flasky II</a>  <!-- hyper link goes to / -->
+            <a class="navbar-brand" href="/textmining">Text Mining</a>  <!-- hyper link goes to / -->
         </div>
 		<div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
